--- a/starter/src/app/patient/components/patient-item/patient-item.component.html
+++ b/starter/src/app/patient/components/patient-item/patient-item.component.html
@@ -1,14 +1,14 @@
 <div class="wrapper">
   <div fxLayout="row" fxLayoutWrap="wrap">
     <div fxFlex.gt-sm="100" fxFlex="100">
-      <app-patient-card *ngIf="switch && switchInfor && informations" [patient]="patient" [lastInformation]="lastInformation" (updatePatientForm)="updatePatientForm($event)"
-        (addInforForm)="addInforForm($event)" (afficherInforForm)="afficherInforForm($event)">
+      <app-patient-card *ngIf="switch && switchInfor && informations" [patient]="patient" [lastInformation]="lastInformation" (updatePatientForm)="switch=false"
+        (addInforForm)="switchInfor=false" (afficherInforForm)="informations=false">
       </app-patient-card>
-      <app-edit-patient *ngIf="!switch" [patient]="patient" [patientId]="patientId" (annulerPatientForm)="annulerPatientForm($event)"
-        (updateForm)="updateForm($event)">
+      <app-edit-patient *ngIf="!switch" [patient]="patient" [patientId]="patientId" (annulerPatientForm)="switch=true"
+        (updateForm)="switch=true">
       </app-edit-patient>
-      <app-information-form *ngIf="!switchInfor" (annulerInformationForm)="annulerInformationForm($event)"></app-information-form>
-      <app-information *ngIf="!informations" [informations]="patient.informations" (return)="return($event)">
+      <app-information-form *ngIf="!switchInfor" (annulerInformationForm)="switchInfor=true"></app-information-form>
+      <app-information *ngIf="!informations" [informations]="patient.informations" (return)="informations=true">
       </app-information>
     </div>
     <div fxFlex.gt-sm="100" fxFlex="100">
@@ -35,8 +35,7 @@
                   <ng-template matTabLabel>Chimie</ng-template>
                   <mat-card-content>
                     <app-bilans *ngIf="switchbilan && switchBilanUp" [bilans]="patient.bilans" (ajoutBilanForm)="ajoutBilanForm($event)" (updateBilanForm)="updateBilan($event)"></app-bilans>
-<app-bilan-from *ngIf="!switchbilan || !switchBilanUp" [bilan]="bilan" (annulerForm)="annulerForm($event)" (submitSuccess)="submitOK()"></app-bilan-from>
-
+                    <app-bilan-from *ngIf="!switchbilan || !switchBilanUp" [bilan]="bilan" (annulerForm)="switchbilan=true; switchbilanUp=true" (submitSuccess)="switchbilan=true; switchbilanUp=true"></app-bilan-from>
                   </mat-card-content>
                 </mat-tab>
                 <mat-tab>
@@ -47,9 +46,9 @@
             <mat-tab>
               <mat-card-content>
                 <ng-template matTabLabel>Photos</ng-template>
-                <app-uploads *ngIf="switchUpload" [uploads]="patient.uploads" (uploadForm)="uploadForm($event)"></app-uploads>
+                <app-uploads *ngIf="switchUpload" [uploads]="patient.uploads" (uploadForm)="switchUpload=false"></app-uploads>
 
-                <app-upload-form *ngIf="!switchUpload" (annulerUploadForm)="annulerUploadForm($event)"></app-upload-form>
+                <app-upload-form *ngIf="!switchUpload" (annulerUploadForm)="switchUpload=true"></app-upload-form>
               </mat-card-content>
             </mat-tab>
           </mat-tab-group>
