--- a/starter/src/app/patient/components/uploads/uploads.component.html
+++ b/starter/src/app/patient/components/uploads/uploads.component.html
@@ -6,7 +6,7 @@
         <mat-icon>add</mat-icon>NEW </button>
     </div>
     <mat-grid-list cols="3">
-      <mat-grid-tile *ngFor="let image of uploads" rowHeight="4:3">
+      <mat-grid-tile *ngFor="let image of uploads$" rowHeight="4:3">
         <img src="http://localhost:3000/{{image.file}}" alt="Card image cap" />
         <mat-grid-tile-footer>
           <h3 matLine>{{ image.title }}</h3>
