--- a/starter/src/app/medcin/add-medcin/add-medcin.component.html
+++ b/starter/src/app/medcin/add-medcin/add-medcin.component.html
@@ -1,5 +1,5 @@
 <mat-card>
-  <mat-card-title>Ajout d'un Medcin</mat-card-title>
+  <mat-card-title>Ajout d'un Medecin</mat-card-title>
   <mat-card-subtitle>Saisir les infos:</mat-card-subtitle>
   <form [formGroup]="form">
     <mat-card-content>
