--- a/starter/src/app/medcin/edit-medcin/edit-medcin.component.html
+++ b/starter/src/app/medcin/edit-medcin/edit-medcin.component.html
@@ -1,10 +1,10 @@
 <mat-card>
-  <mat-card-title>Modification d'un Medcin</mat-card-title>
+  <mat-card-title>Modification d'un Medecin</mat-card-title>
   <mat-card-subtitle>Saisir les infos:</mat-card-subtitle>
   <form [formGroup]="form" (ngSubmit)="onSubmit()">
     <mat-card-content>
       <div fxLayout="row" class="row justify-content-center" fxLayoutWrap="wrap">
-        <div class="mb-1 col-4">
+        <div class="mb-1 col-8">
           <mat-form-field style="width: 100%">
             <input matInput placeholder="First name" [formControl]="form.controls['fname']">
           </mat-form-field>
@@ -12,11 +12,11 @@
           <small *ngIf="form.controls['fname'].hasError('minlength') && form.controls['fname'].touched" class="mat-text-warn">Your first name must be at least 5 characters long.</small>
           <small *ngIf="form.controls['fname'].hasError('maxlength') && form.controls['fname'].touched" class="mat-text-warn">Your first name cannot exceed 10 characters.</small>
         </div>
-        <div class="col-6"></div>
+        <div class="col-2"></div>
       </div>
 
       <div fxLayout="row" class="row justify-content-center" fxLayoutWrap="wrap">
-        <div class="mb-1 col-4">
+        <div class="mb-1 col-8">
           <mat-form-field style="width: 100%">
             <input matInput placeholder="Last name" [formControl]="form.controls['lname']">
           </mat-form-field>
@@ -24,22 +24,22 @@
           <small *ngIf="form.controls['lname'].hasError('minlength') && form.controls['lname'].touched" class="mat-text-warn">Your last name must be at least 5 characters long.</small>
           <small *ngIf="form.controls['lname'].hasError('maxlength') && form.controls['lname'].touched" class="mat-text-warn">Your last name cannot exceed 10 characters.</small>
         </div>
-        <div class="col-6"></div>
+        <div class="col-2"></div>
       </div>
 
       <div fxLayout="row" class="row justify-content-center" fxLayoutWrap="wrap">
-        <div class="mb-1 col-4">
+        <div class="mb-1 col-8">
           <mat-form-field style="width: 100%">
             <input matInput placeholder="Email address" [formControl]="form.controls['email']" type="email">
           </mat-form-field>
           <small *ngIf="form.controls['email'].hasError('required') && form.controls['email'].touched" class="mat-text-warn">You must include an email address.</small>
           <small *ngIf="form.controls['email'].errors?.email && form.controls['email'].touched" class="mat-text-warn">You must include a valid email address.</small>
         </div>
-        <div class="col-6"></div>
+        <div class="col-2"></div>
       </div>
 
       <div fxLayout="row" class="row justify-content-center" fxLayoutWrap="wrap">
-        <div class="mb-1 col-4">
+        <div class="mb-1 col-8">
           <mat-form-field style="width: 100%">
             <input matInput (focus)="dt.open()" [matDatepicker]="dt"
              placeholder="Date de Naissance"
@@ -49,11 +49,11 @@
           </mat-form-field>
           <small *ngIf="form.controls['date'].errors?.date && form.controls['date'].touched" class="mat-text-warn">You must include a valid date.</small>
         </div>
-        <div class="col-6"></div>
+        <div class="col-2"></div>
       </div>
 
       <div fxLayout="row" class="row justify-content-center" fxLayoutWrap="wrap">
-        <div class="mb-1 col-4">
+        <div class="mb-1 col-8">
           <mat-form-field style="width: 100%">
             <mat-select [(value)]="selected" placeholder="Spécialité" [formControl]="form.controls['specialty']">
               <mat-option> </mat-option>
@@ -64,12 +64,11 @@
           </mat-form-field>
           <small *ngIf="form.controls['specialty'].hasError('required') && form.controls['specialty'].touched" class="mat-text-warn">You must include a specialty.</small>
         </div>
-        <div class="col-6"></div>
+        <div class="col-2"></div>
       </div>
 
       <div class="row justify-content-center">
-        <!-- <label>Gender</label> -->
-        <div class="col-4">
+        <div class="col-8">
           <mat-radio-group [formControl]="form.controls['gender']">
             <div fxLayout="row" class=" row justify-content-around">
               <div class="col-4">
@@ -82,7 +81,7 @@
           </mat-radio-group>
           <small *ngIf="!form.controls['gender'].valid && form.controls['gender'].touched" class="mat-text-warn">You must select a gender.</small>
         </div>
-        <div class="col-6"></div>
+        <div class="col-2"></div>
       </div>
 
 
@@ -90,17 +89,17 @@
     <hr>
     <mat-card-actions>
       <div class="row justify-content-center">
-        <div class="col-4">
+        <div class="col-8">
           <div class="row justify-content-around">
             <div class="mb-1 col-4">
               <button mat-raised-button color="primary" type="submit" [disabled]="!form.valid">Modifier</button>
             </div>
             <div class="col-4">
-              <button mat-raised-button color="warn" (click)="deleteMedcin()">Supprimer</button>
+              <button mat-raised-button color="warn" (click)="annulerForm()">Annuler</button>
             </div>
           </div>
         </div>
-        <div class="col-6"></div>
+        <div class="col-2"></div>
       </div>
 
     </mat-card-actions>
