--- a/starter/src/app/medcin/medcin-profile/medcin-profile.component.html
+++ b/starter/src/app/medcin/medcin-profile/medcin-profile.component.html
@@ -1,97 +1,121 @@
-<mat-toolbar color="primary">
-  <mat-toolbar-row></mat-toolbar-row>
-  <mat-toolbar-row></mat-toolbar-row>
-</mat-toolbar>
 
-<div fxLayout="row" fxLayoutWrap="wrap" class="main-content">
-  <div fxFlex.gt-sm="60" fxFlex="100">
-    <mat-card>
-      <mat-toolbar color="primary">
-        <mat-toolbar-row>
-          <span fxFlex="35"></span>
-          <mat-card-title>Patient Demographics</mat-card-title>
-        </mat-toolbar-row>
-      </mat-toolbar>
-   
-      <form [formGroup]="form">
-        <mat-card-content>            
-          <mat-form-field style="width: 50%"> 
-            <input matInput placeholder="Email address" type="email" disabled>
-          </mat-form-field>
-          <br><br>
 
+<div class="wrapper">
+  <div fxLayout="row" fxLayoutWrap="wrap">
+    <div fxFlex.gt-sm="40" fxFlex="100">
+      <mat-card *ngIf="switch">
+        <mat-card-content>
           <div fxLayout="row">
             <div fxFlex="55">
-              <mat-form-field style="width: 90%">
-                <input matInput placeholder="First name" [formControl]="form.controls['fname']" [(ngModel)]="medcin.firstName">
-              </mat-form-field>
-            </div>
-            <div fxFlex="45">
-              <mat-form-field style="width: 100%">
-                <input matInput placeholder="Last name" [(ngModel)]="medcin.lastName" [formControl]="form.controls['lname']">
-              </mat-form-field>
+              <h1 class="ma-0"> {{ medcin.firstName}}
+                <b> {{ medcin.lastName }} </b>
+              </h1>
+              <small> {{ medcin.email }} </small>
+              <br><br>
+              <p>
+                <b>Sexe: </b>{{medcin.sexe}}
+              </p>
+              <p>
+                <b>Date de la Naissance: </b>
+                {{medcin.dateDeNaissance | date:'yyyy-MM-dd HH:mm'}}
+              </p>
+              <p class="mt-xs mb-xs"> <b>Spécialité: </b> {{ medcin.specialty}} </p>
+              <button mat-raised-button color="primary" (click)="updateMedcin()">Modifier</button>
             </div>
           </div>
-          <br>
-          <br>
+        </mat-card-content>
+        <hr>
+        <mat-card-content>
+          <div fxLayout="row" class="text-xs-center">
+            <div fxFlex="33">
+              <h1 class="ma-0">
+                <b>12</b>
+              </h1>
+              <small>Patients</small>
+            </div>
+            <div fxFlex="33">
+              <h1 class="ma-0">
+                <b>20</b>
+              </h1>
+              <small>Bilans</small>
+            </div>
+            <div fxFlex="33">
+              <h1 class="ma-0">
+                <b>17</b>
+              </h1>
+              <small>Uploads</small>
+            </div>
+          </div>
+        </mat-card-content>
+        <hr>
+      </mat-card>
+      <app-edit-medcin *ngIf="!switch" [medcin]="medcin" (annulerMedcinForm)="switch=true" (updateForm)="switch=true"></app-edit-medcin>
 
-          <div fxLayout="row">
-            <div fxFlex="55">
-              <mat-form-field style="width: 90%">
-                <input matInput placeholder="Date de Naissance" [(ngModel)]="medcin.dateDeNaissance" [formControl]="form.controls['date']"
-                  type="date">
-              </mat-form-field>
+    </div>
+    <div fxFlex.gt-sm="60" fxFlex="100">
+      <div fxLayout="column">
+        <mat-card>
+          <mat-selection-list>
+            <h3 mat-subheader>Permissions</h3>
+      
+            <mat-list-option value="1">Create</mat-list-option>
+            <mat-list-option selected value="1">Read</mat-list-option>
+            <mat-list-option value="1">Update</mat-list-option>
+            <mat-list-option value="1">Delete</mat-list-option>
+          </mat-selection-list>
+        </mat-card>
+        <hr>
+        <br>
+        <mat-card>
+          <mat-card-header> <h3>Mes Patients</h3> </mat-card-header>
+          <mat-card-content>
+            <div fxLayout="row">
+              <div fxFlex="25"></div>
+              <div fxFlex="45">
+                <mat-form-field style="width: 100%">
+                  <mat-select [(value)]="selected" placeholder="Patient">
+                    <mat-option></mat-option>
+                    <mat-option value="chirigien">aaa bbbb</mat-option>
+                    <mat-option value="pediatrie">ccc dddd</mat-option>
+                    <mat-option value="radiology">eee fff</mat-option>
+                  </mat-select>
+                </mat-form-field>
+              </div>
+              <div fxFlex="15">
+                <button mat-raised-button color="primary" (click)="addPatientMember()"><mat-icon>add</mat-icon>Add</button>
+              </div>
             </div>
-            <div fxFlex="45">
-              <mat-form-field style="width: 100%">
-                <mat-select [(value)]="selected" [(ngModel)]="medcin.specialty" placeholder="Spécialité" [formControl]="form.controls['specialty']">
-                  <mat-option> </mat-option>
-                  <mat-option value="chirigien">Chirigien</mat-option>
-                  <mat-option value="pediatrie">Pediatrie</mat-option>
-                  <mat-option value="radiology">Radiology</mat-option>
-                </mat-select>
-              </mat-form-field>
-            </div>
-          </div>
-          <br>
-          <mat-radio-group [formControl]="form.controls['gender']">
-            <mat-radio-button selected value="male">Male</mat-radio-button>
-            <span fxFlex></span>
-            <mat-radio-button value="female">Female</mat-radio-button>
-          </mat-radio-group>
-        
           </mat-card-content>
-          <mat-card-actions>
-            <button mat-raised-button color="accent" class="float-right">Update Profile</button>
-          </mat-card-actions>
-          <br><br>
-        </form>
-    </mat-card>
-  </div>
-  <div fxFlex.gt-sm="40" fxFlex="100">
-    <mat-card>
-      <!-- <mat-selection-list #groceries [ngModel]="selectedOptions" (ngModelChange)="onSelectedOptionsChange($event)" (change)="changeEventCount = changeEventCount + 1"> -->
-        <mat-selection-list>
-        <h3 mat-subheader>Permissions</h3>
-    
-        <mat-list-option value="bananas">Create</mat-list-option>
-        <mat-list-option selected value="oranges">Read</mat-list-option>
-        <mat-list-option value="apples">Update</mat-list-option>
-        <mat-list-option value="strawberries">Delete</mat-list-option>
-      </mat-selection-list>
-    
-      <!-- <mat-card-content>
-        <p>Selected: {{selectedOptions | json}}</p>
-        <p>Change Event Count {{changeEventCount}}</p>
-        <p>Model Change Event Count {{modelChangeEventCount}}</p>
-    
-        <p>
-          <button mat-raised-button (click)="groceries.selectAll()">Select all</button>
-          <button mat-raised-button (click)="groceries.deselectAll()">Deselect all</button>
-        </p>
-      </mat-card-content> -->
-    
-    </mat-card>
+          <br>
+          <mat-card-content>
+            <mat-table #table [dataSource]="dataSource">
+
+            <ng-container matColumnDef="id">
+              <mat-header-cell *matHeaderCellDef> No. </mat-header-cell>
+              <mat-cell *matCellDef="let patient"> {{patient.id}} </mat-cell>
+            </ng-container>
+
+            <ng-container matColumnDef="firstName">
+              <mat-header-cell *matHeaderCellDef> Nom </mat-header-cell>
+                <mat-cell *matCellDef="let patient">
+                  {{patient.firstName}}          
+                </mat-cell>
+            </ng-container>
+
+            <ng-container matColumnDef="lastName">
+              <mat-header-cell *matHeaderCellDef> Prénom </mat-header-cell>
+                <mat-cell *matCellDef="let patient">
+                  {{patient.lastName }}             
+                </mat-cell>
+            </ng-container>
+
+            <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+            <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+            </mat-table>
+          </mat-card-content>
+        </mat-card>
+      </div>
+    </div>
   </div>
 </div>
 
