--- a/starter/src/app/session/signup/signup.component.html
+++ b/starter/src/app/session/signup/signup.component.html
@@ -5,7 +5,7 @@
         <mat-card-content>
           <form [formGroup]="form" (ngSubmit)="onSubmit()">
             <div class="text-xs-center pb-1">
-              <img src="assets/images/logo-dark.svg" alt=""/>
+              <!-- <img src="assets/images/logo-dark.svg" alt=""/> -->
               <p class="mat-text-muted">Créer votre compte pour continuer.</p>
             </div>
             <div fxLayout="column"  fxLayoutAlign="space-around">
