--- a/starter/src/app/core/header/header.component.html
+++ b/starter/src/app/core/header/header.component.html
@@ -3,7 +3,7 @@
     <mat-icon>menu</mat-icon>
   </button>
   <div class="branding">
-    <!-- <div class="logo"></div> -->
+    <div class="logo"></div>
   </div>
   <div class="search-bar" fxFlex>
     <!-- <form class="search-form" [ngStyle.xs]="{display: 'none'}">
