--- a/packages/client/src/app/patient/components/patient-item/patient-item.component.html
+++ b/packages/client/src/app/patient/components/patient-item/patient-item.component.html
@@ -43,7 +43,7 @@
                 </mat-tab>
                 <mat-tab>
                   <ng-template matTabLabel>Traitement</ng-template>
-                  <app-traitements [traitements]="patient.traitements"></app-traitements>
+                  <app-traitements [traitements]="patient.traitements" [patientId]="patientId"></app-traitements>
                 </mat-tab>
                 <mat-tab>
                   <ng-template matTabLabel>Bacterologie</ng-template>
@@ -74,7 +74,7 @@
             </mat-tab>
             <mat-tab>
               <ng-template matTabLabel>Medecins</ng-template>
-              <app-membres></app-membres>
+              <app-membres [medcins]="patient.medcins" [members]="patient.members"></app-membres>
             </mat-tab>
           </mat-tab-group>
         </mat-card>
