--- a/packages/client/src/app/patient/components/traitements/traitements.component.html
+++ b/packages/client/src/app/patient/components/traitements/traitements.component.html
@@ -24,7 +24,7 @@
             <ng-container matColumnDef="date">
               <mat-header-cell *matHeaderCellDef> Date Time </mat-header-cell>
               <mat-cell *matCellDef="let traitement">
-                {{traitement.date}}
+                {{ traitement.date | date : 'yyyy-MM-dd HH:mm' }}
               </mat-cell>
             </ng-container>
 
