--- a/packages/client/src/app/patient/components/membres/membres.component.html
+++ b/packages/client/src/app/patient/components/membres/membres.component.html
@@ -5,14 +5,14 @@
         <mat-card-content>
           <div fxLayout="column">
             <mat-form-field style="width: 100%">
-              <mat-select [(value)]="selected" placeholder="Medecin">
+              <mat-select [(value)]="selected" placeholder="Medecin" [(ngModel)]="medcinId">
                 <mat-option></mat-option>
-                <mat-option value="1">aaa bbbb</mat-option>
-                <mat-option value="2">ccc dddd</mat-option>
-                <mat-option value="3">eee fff</mat-option>
+                <mat-option *ngFor="let medcin of medcins" [value]="medcin.id">
+                   {{medcin.firstName }}   {{medcin.lastName}}
+                </mat-option>
               </mat-select>
             </mat-form-field>
-            <button mat-raised-button color="primary" (click)="addPatientMember()">
+            <button [disabled]="false" mat-raised-button color="primary" (click)="addPatientMember()">
               <mat-icon>add</mat-icon>Ajouter
             </button>
           </div>
@@ -21,12 +21,12 @@
     </div>
     <div fxFlex.gt-sm="60" fxFlex="100">
       <mat-card>
-        <!-- <mat-card-content>
+        <mat-card-content>
           <mat-table #table [dataSource]="dataSource">
 
             <ng-container matColumnDef="id">
               <mat-header-cell *matHeaderCellDef> No. </mat-header-cell>
-              <mat-cell *matCellDef="let patient"> {{medcin.id}} </mat-cell>
+              <mat-cell *matCellDef="let medcin"> {{medcin.id}} </mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="firstName">
@@ -43,10 +43,24 @@
               </mat-cell>
             </ng-container>
 
+            <!-- <ng-container matColumnDef="admin">
+              <mat-header-cell *matHeaderCellDef> Admin </mat-header-cell>
+              <mat-cell *matCellDef="let medcin">
+                {{ medcin.admin }}
+              </mat-cell>
+            </ng-container>
+
+            <ng-container matColumnDef="isAuthorize">
+              <mat-header-cell *matHeaderCellDef> Authorized </mat-header-cell>
+              <mat-cell *matCellDef="let medcin">
+                {{medcin.isAuthorize }}
+              </mat-cell>
+            </ng-container> -->
+
             <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
             <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
           </mat-table>
-        </mat-card-content> -->
+        </mat-card-content>
       </mat-card>
     </div>
   </div>
