--- a/packages/client/src/app/patient/components/uploads/uploads.component.html
+++ b/packages/client/src/app/patient/components/uploads/uploads.component.html
@@ -13,7 +13,7 @@
         <mat-grid-tile-footer>
           <h3 matLine>{{ image.title }}</h3>
           <span matLine>{{image.description }}</span>
-          <mat-icon>favorite</mat-icon>
+          <!-- <mat-icon>favorite</mat-icon> -->
         </mat-grid-tile-footer>
       </mat-grid-tile>
     </mat-grid-list>
