--- a/packages/client/src/app/session/signin/signin.component.html
+++ b/packages/client/src/app/session/signin/signin.component.html
@@ -7,7 +7,7 @@
             <div *ngIf="!validLogin" class="alert alert-danger">Invalid username and/or password.</div>
             <div class="text-xs-center pb-1">
               <img src="assets/images/logo-dark.svg" alt=""/>
-              <p class="mat-text-muted">Sign in with your app id to continue.</p>
+              <p class="mat-text-muted">Sign in with your app login to continue.</p>
             </div>
             <div fxLayout="column" fxLayoutAlign="space-around">
               <div class="pb-1">
