--- a/packages/client/src/app/medcin/medcins/medcins.component.html
+++ b/packages/client/src/app/medcin/medcins/medcins.component.html
@@ -4,60 +4,32 @@
 <mat-card>
     <mat-card-title>MEDECINS</mat-card-title>
     <mat-card-content>
-
-      <div class="example-container mat-elevation-z8">
-
-        <mat-table #table [dataSource]="dataSource">
-
-          <ng-container matColumnDef="id">
-            <mat-header-cell *matHeaderCellDef> No. </mat-header-cell>
-            <mat-cell *matCellDef="let medcin"> {{medcin.id}} </mat-cell>
-          </ng-container>
-
-          <ng-container matColumnDef="firstName">
-            <mat-header-cell *matHeaderCellDef> Nom </mat-header-cell>
-              <mat-cell *matCellDef="let medcin">
-                {{medcin.firstName}} {{medcin.lastName }}             
-              </mat-cell>
-          </ng-container>
-
-          <ng-container matColumnDef="dateDeNaissance">
-            <mat-header-cell *matHeaderCellDef> Date de Naissance </mat-header-cell>
-            <mat-cell *matCellDef="let medcin"> {{medcin.dateDeNaissance | date: 'yyyy-MM-dd HH:mm'}} </mat-cell>
-          </ng-container>
-
-          <ng-container matColumnDef="sexe">
-          <mat-header-cell *matHeaderCellDef> Genre </mat-header-cell>
-          <mat-cell *matCellDef="let medcin"> {{medcin.sexe}} </mat-cell>
-          </ng-container>
-
-          <ng-container matColumnDef="specialty">
-          <mat-header-cell *matHeaderCellDef> Specialité </mat-header-cell>
-          <mat-cell *matCellDef="let medcin"> {{medcin.specialty}} </mat-cell>
-          </ng-container>
-
-          <ng-container matColumnDef="email">
-          <mat-header-cell *matHeaderCellDef> Email </mat-header-cell>
-          <mat-cell *matCellDef="let medcin"> {{medcin.email}} </mat-cell>
-          </ng-container>
-
-          <ng-container matColumnDef="lastName">
-            <mat-header-cell *matHeaderCellDef> </mat-header-cell>
-            <mat-cell *matCellDef="let medcin">
-              <a mat-raised-button color="primary" [routerLink]="['/medcin/user-profile/'+medcin.id]" href="">Voir Profile </a>
-            </mat-cell>
-          </ng-container>
-
-
-          <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-          <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-        </mat-table>
-
-      <!-- <mat-paginator #paginator [pageSize]="10" [pageSizeOptions]="[5, 10, 20]"> </mat-paginator> -->
-
-      </div>
-
-
+      <ngx-datatable *ngIf='allMedcins' class="material" 
+        [rows]="allMedcins" [loadingIndicator]="true"
+        [columnMode]="'force'" [headerHeight]="50"
+        [footerHeight]="50" [rowHeight]="50"
+        [scrollbarV]="true" [limit]="8">
+        <ngx-datatable-column name="No" prop="id" [width]="30" [resizeable]="false">
+          <ng-template let-row="row">
+            {{ row.id }}
+          </ng-template>
+        </ngx-datatable-column>
+        <ngx-datatable-column [width]="50" name="Nom" prop="firstName" [resizeable]="false"></ngx-datatable-column>
+        <ngx-datatable-column [width]="50" name="Prénom" prop="lastName" [resizeable]="false"></ngx-datatable-column>
+        <ngx-datatable-column [width]="100" name="Date De Naissance" prop="dateDeNaissance" [resizeable]="false"> 
+          <ng-template ngx-datatable-cell-template let-rowIndex="rowIndex" let-value="value" let-row="row">
+            {{ value | date: 'yyyy-MM-dd HH:mm' }}
+          </ng-template>
+        </ngx-datatable-column>
+        <ngx-datatable-column [width]="30" name="Sexe" prop="sexe" [resizeable]="false"></ngx-datatable-column>
+        <ngx-datatable-column [width]="50" name="Spécialité" prop="specialty" [resizeable]="false"></ngx-datatable-column>
+        <ngx-datatable-column [width]="100" name="Email" prop="email" [resizeable]="false"></ngx-datatable-column>
+        <ngx-datatable-column [width]="120" name="Action" prop="id" [resizeable]="false">
+          <ng-template ngx-datatable-cell-template let-rowIndex="rowIndex" let-value="value" let-row="row">
+              <a mat-raised-button color="primary" [routerLink]="['/medcin/user-profile/'+value]" href="">Voir Profile </a>
+          </ng-template>
+        </ngx-datatable-column>
+      </ngx-datatable>
     </mat-card-content>
     <hr>
     <mat-card-footer></mat-card-footer>
